# forme

./: LICENSE  README.md  pyproject.toml  requirements.txt
algorithm_study/: codeup_1512.py
src/: compare_checker.py  flatter.py  shape_print.py  signalTools.py  striper.py  torchTools.py
src/forme.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
